--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         </div>
     </section>
     <footer>
+        <a target="_blank" href="https://www.linkedin.com/in/corfu-sergiu-575148145/">My LinkedIn Profile</a>
         <a target="_blank" href="https://9gag.com">Wanna have fun?</a>
     </footer>
 
