footer color changed & new font

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <title>My CV</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -17,7 +19,7 @@
 
             <img src="selfie.jpg" width="150" height="135" alt="srry no face">
 
-            <p id="job-title">Wanna be WebDeveloper @ <span>Planet Earth</span></p>
+            <p id="job-title">Learning how to @ <span>Webdevelop</span></p>
         </div>
 
         <ul id="top-menu-bar">
@@ -44,7 +46,7 @@
         <div id="main">
             <div id='home' class="page">
                 <h2>Home</h2>
-                Bla bla bla lba
+                Intoroduction purposes
             </div>
             <div id='skills' class='page' style="display: none;">
                 <h2>Skills and endorsment</h2>
@@ -57,25 +59,39 @@
             <div id="projects" class='page' style="display: none;">
                 <h2>Projects</h2>
             </div>
+
             <div id="languages" class='page' style="display: none;">
                 <h2>Known languages</h2>
                 <table border="1">
-                    <tr>
-                        <td>English</td>
-                        <td>C1</td>
-                    </tr>
-                    <tr>
-                        <td>Romana</td>
-                        <td>C2</td>
-                    </tr>
+                    <thead>
+                        <th>Languages</th>
+                        <th>Speaking</th>
+                        <th>Listening</th>
+                        <th>Reading</th>
+                        <th>Writing</th>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>English</td>
+                            <td>C1</td>
+                            <td>C1</td>
+                            <td>C1</td>
+                            <td>C1</td>
+                        </tr>
+                        <tr>
+                            <td>Romanian</td>
+                            <td colspan="4" align="center">Native</td>
+                        </tr>
+                    </tbody>
                 </table>
             </div>
 
         </div>
     </section>
     <footer>
-        <a target="_blank" href="https://www.linkedin.com/in/corfu-sergiu-575148145/">My LinkedIn Profile</a>
-        <a target="_blank" href="https://9gag.com">Wanna have fun?</a>
+        <a class='linkedin' target="_blank" href="https://www.linkedin.com/in/corfu-sergiu-575148145/">My LinkedIn Profile</a>
+        <p class='or'>OR</p>
+        <a class= 'fun' target="_blank" href="https://9gag.com">Do you want a break?</a>
     </footer>
 
     <script src="functions.js"></script>
