transformed skills array into json objects

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <section>...M2...</section>
         </div>
         <div id="main">
-            <div id='home' class="page">
+            <div id='home' class="page" style="display: none;">
                 <h2>Home</h2>
                 Intoroduction purposes
             </div>
